--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -196,7 +196,7 @@
     }
   }
 
-  &[data-variant='addRemoveButtons'] .item-remove {
+  &[data-variant='addDeleteButtons'] .item-remove {
     @extend %button;
     @extend %button--primary;
     display: none !important;
