feat(form) bugfix

--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -25,6 +25,10 @@
       color: $color-primary-navy;
     }
   }
+  
+  ul.summary-entry{
+    padding-left: 1rem;
+  }
 
   .summary-entry,
   .item {
