SEPD-6318 advanceddatepicker alignment

--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-.form .advanceddatepicker {
+.form .panel-repeatable-panel .advanceddatepicker {
   display: flex;
   flex-wrap: wrap;
   gap: $spacing-400;
