--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -1,6 +1,17 @@
 @use '../../../../styles/settings' as *;
 
 .extended-checkbox-container {
+
+  .field-description {
+    p {
+      font-size: 18px;
+      font-weight: 500;
+      color: $text-dark-primary;
+      margin-bottom: 8px;
+      padding-bottom: 0;
+    }
+  }
+
   .modal {
     dialog {
       max-width: 696px;
