--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -52,6 +52,7 @@
   align-items: flex-start; /* Aligns items to the start of the cross axis */
   gap: 4px; /* Adds a small space between the label text and description */
   padding: $spacing-400;
+  background-color:$color-white;
 
   label {
     font-weight: 400;
