--- a/styles/settings/_spacings.scss
+++ b/styles/settings/_spacings.scss
@@ -1,6 +1,7 @@
 $spacing-000: 0;
 $spacing-050: 2px;
 $spacing-100: 4px;
+$spacing-150: 6px;
 $spacing-200: 8px;
 $spacing-300: 12px;
 $spacing-400: 16px;
