--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -24,7 +24,7 @@
       padding: $spacing-450;
 
       * {
-        font-size: $size-font-body-large;
+        font-size: $size-font-body-default;
       }
     }
 
