--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -43,14 +43,13 @@
   }
 }
 
-/* Target labels that have a description to apply flex layout. */
 .form .extended-checkbox {
   border-radius: $border-radius-mid;
   border: 2px solid $color-shade-navy-40;
   display: flex;
-  flex-direction: column; /* Stacks the text and description vertically */
-  align-items: flex-start; /* Aligns items to the start of the cross axis */
-  gap: 4px; /* Adds a small space between the label text and description */
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
   padding: $spacing-400;
   background-color:$color-white;
 
@@ -122,37 +121,30 @@
   }
 }
 
-/* Style the main text span of the checkbox label. */
 .form .field-main-checkbox .field-label .text {
   font-weight: normal;
 }
 
-/* Use flexbox on the label for easy alignment of the icon and text */
 .extended-checkbox .field-label {
   display: inline-flex;
   align-items: center;
-  gap: 8px; /* Adjust the space between the icon and the label text */
+  gap: 8px;
 }
 
-/*
- * This creates the "icon holder" for any checkbox that has an icon class.
- * The [class*="..."] selector is a flexible way to target any element
- * whose class contains "extended-checkbox--icon-".
- */
+
 .extended-checkbox__icon {
   display: block;
   margin-right: $spacing-400;
 
   &::before {
-    content: ''; /* This is required for a pseudo-element to be displayed */
+    content: '';
     display: block;
-    // Override size for each icon if needed below
     width: 29px;
     height: 29px;
     background-repeat: no-repeat;
     background-size: 29px;
     background-position: center;
-    flex-shrink: 0; /* Prevents the icon from shrinking if the label text is long */
+    flex-shrink: 0;
   }
 }
 
