--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -1,7 +1,6 @@
 @use '../../../../styles/settings' as *;
 
 .extended-checkbox-container {
-
   .field-description {
     p {
       font-size: 18px;
@@ -13,9 +12,7 @@
   }
 
   .modal {
-    dialog {
-      max-width: 696px;
-    }
+    dialog { max-width: 696px; }
 
     .close-button {
       right: $spacing-500;
@@ -51,7 +48,7 @@
   align-items: flex-start;
   gap: 4px;
   padding: $spacing-400;
-  background-color:$color-white;
+  background-color: $color-white;
 
   label {
     font-weight: 400;
@@ -66,9 +63,7 @@
   }
 
   label,
-  textarea {
-    padding: 0;
-  }
+  textarea { padding: 0; }
 
   .edit {
     @extend %link-button;
@@ -80,9 +75,7 @@
     text-decoration: none;
   }
 
-  input[type='checkbox']:checked + label {
-    background-color: transparent;
-  }
+  input[type='checkbox']:checked + label { background-color: transparent; }
 
   .checkbox-divider {
     height: 1px;
@@ -99,38 +92,29 @@
     padding-bottom: 0;
     font-size: $size-font-label-subtitle;
   }
-}
 
-.field-modal-buttons {
-  display: flex;
-  justify-content: space-between;
-  background-color: $color-white;
-  padding: $spacing-500;
-  border-top: 2px solid $color-shade-navy-20;
-
-  button[name='modal-cancel-button'] {
-    @include elevation-1;
-    @extend %button;
-    @extend %button--hollow;
-  }
-
-  button[name='modal-save-button'] {
-    @include elevation-1;
-    @extend %button;
-    @extend %button--primary;
+  /* moved from checkbox.scss */
+  .extended-checkbox--description {
+    font-size: $size-font-body-default;
+    color: $text-secondary;
+    font-weight: $font-weight-regular;
   }
 }
 
-.form .field-main-checkbox .field-label .text {
-  font-weight: normal;
+/* page-scoped indent for description, kept from previous behavior */
+.field-strengths-selection-panel {
+  .extended-checkbox .extended-checkbox--description {
+    margin-inline-start: calc(1rem + 1.4rem);
+  }
 }
+
+.form .field-main-checkbox .field-label .text { font-weight: normal; }
 
 .extended-checkbox .field-label {
   display: inline-flex;
   align-items: center;
   gap: 8px;
 }
-
 
 .extended-checkbox__icon {
   display: block;
@@ -148,50 +132,11 @@
   }
 }
 
-.extended-checkbox__icon--critical-thinking {
-  &::before {
-    background-image: url('../../../../icons/ico-critical-thinking-1--critical-thinking-nut-bolt-cog-brain-plan-head.svg');
-  }
-}
-
-.extended-checkbox__icon--ear-hearing {
-  &::before {
-    background-image: url('../../../../icons/ico-ear-hearing-health-medical-hearing-ear.svg');
-  }
-}
-
-.extended-checkbox__icon--error-checking {
-  &::before {
-    background-image: url('../../../../icons/ico-error-checking-warning-sign.svg');
-  }
-}
-
-.extended-checkbox__icon--line-arrow-1 {
-  &::before {
-    background-image: url('../../../../icons/ico-line-arrow-transfer-horizontal-circle-2.svg');
-  }
-}
-
-.extended-checkbox__icon--megaphone-2 {
-  &::before {
-    background-image: url('../../../../icons/ico-megaphone-2--bullhorn-loud-megaphone-share-speaker-transmit.svg');
-  }
-}
-
-.extended-checkbox__icon--shield-check {
-  &::before {
-    background-image: url('../../../../icons/ico-Shield-Check.svg');
-  }
-}
-
-.extended-checkbox__icon--zoom-in-area {
-  &::before {
-    background-image: url('../../../../icons/ico-zoom-in-area.svg');
-  }
-}
-
-.extended-checkbox__icon--user-group-leader {
-  &::before {
-    background-image: url('../../../../icons/user-group--user-group-meeting-leader.svg');
-  }
-}
+.extended-checkbox__icon--critical-thinking { &::before { background-image: url('../../../../icons/ico-critical-thinking-1--critical-thinking-nut-bolt-cog-brain-plan-head.svg'); } }
+.extended-checkbox__icon--ear-hearing       { &::before { background-image: url('../../../../icons/ico-ear-hearing-health-medical-hearing-ear.svg'); } }
+.extended-checkbox__icon--error-checking    { &::before { background-image: url('../../../../icons/ico-error-checking-warning-sign.svg'); } }
+.extended-checkbox__icon--line-arrow-1      { &::before { background-image: url('../../../../icons/ico-line-arrow-transfer-horizontal-circle-2.svg'); } }
+.extended-checkbox__icon--megaphone-2       { &::before { background-image: url('../../../../icons/ico-megaphone-2--bullhorn-loud-megaphone-share-speaker-transmit.svg'); } }
+.extended-checkbox__icon--shield-check      { &::before { background-image: url('../../../../icons/ico-Shield-Check.svg'); } }
+.extended-checkbox__icon--zoom-in-area      { &::before { background-image: url('../../../../icons/ico-zoom-in-area.svg'); } }
+.extended-checkbox__icon--user-group-leader { &::before { background-image: url('../../../../icons/user-group--user-group-meeting-leader.svg'); } }
