--- a/styles/base/_index.scss
+++ b/styles/base/_index.scss
@@ -1,5 +1,6 @@
 @forward 'elements';
 @forward 'forms';
+@forward 'validation';
 @forward 'typography';
 @forward 'wizard-buttons';
 @forward 'footer';
