--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -201,4 +201,32 @@
       margin: 0;
     }
   }
+
+  .field-strengths-selection-panel {
+    .extended-checkbox {
+      .field-label {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .field-description,
+      .extended-checkbox--description,
+      .edit {
+        margin-inline-start: calc(1rem + 1.4rem);
+      }
+
+      .field-description p {
+        margin: 0;
+      }
+
+      /* When the checkbox inside is checked, style the whole wrapper */
+      &:has(> input[type='checkbox']:checked) {
+        border: 2px solid $color-primary;       // blue border (your design token)
+        background-color: $color-shade-blue-10; // pink/blue-shade background
+        border-radius: $border-radius-mid;
+      }
+    }
+  }
+
 }
