--- a/blocks/form/components/extended-checkbox/extended-checkbox.scss
+++ b/blocks/form/components/extended-checkbox/extended-checkbox.scss
@@ -35,6 +35,7 @@
 .form .extended-checkbox {
   border-radius: $border-radius-mid;
   border: 2px solid $color-shade-navy-40;
+  background-color: $color-white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
