--- a/blocks/main-menu/main-menu.scss
+++ b/blocks/main-menu/main-menu.scss
@@ -4,20 +4,21 @@ $nav-height-mobile: 76px;
 $nav-height-desktop: 117px;
 
 .main-menu {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
   padding: $spacing-400 $spacing-450;
   background-color: $color-white;
   border-bottom: 3px solid $color-shade-navy-40;
-  position: relative;
-  max-height: $nav-height-mobile;
-  top: 0;
-  z-index: 1000;
-  position: sticky;
+  min-height: $nav-height-mobile;
 
   @include media('desktop') {
     padding: $spacing-650 $spacing-600 $spacing-600;
-    max-height: $nav-height-desktop;
+    min-height: $nav-height-desktop;
   }
 }
+
 
 .main-menu__inner {
   display: flex;
