--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -7,7 +7,7 @@
   min-height: $wizard-body-height;
   height: 100%;
   position: relative;
-  z-index: 1; // needed for background
+  z-index: 1;
 
   @include media('tablet') {
     min-height: $wizard-body-height-tablet;
@@ -37,6 +37,7 @@
     display: flex;
 
     .wizard-menu-items {
+      display: flex;
       flex-direction: column;
       width: 300px;
     }
@@ -47,9 +48,7 @@
     display: none;
   }
 
-  > .current-wizard-step.panel-wrapper:first-of-type
-    ~ .wizard-button-wrapper
-    > .wizard-button-prev {
+  > .current-wizard-step.panel-wrapper:first-of-type ~ .wizard-button-wrapper > .wizard-button-prev {
     display: none;
   }
 
@@ -64,4 +63,11 @@
   .wizard-button-wrapper .field-wrapper {
     flex: unset;
   }
+}
+
+.field-top-nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
 }
