--- a/styles/base/_validation.scss
+++ b/styles/base/_validation.scss
@@ -3,9 +3,17 @@
 .field-invalid {
 
   &.radio-group--with-icon .radio-group--with-icon__label,
-  .radio-wrapper>.field-label
+  .radio-wrapper>.field-label,
   .checkbox-wrapper>.field-label,
   select[required] {
-    border-color: $color-feedback-red;
+    border-color: $color-feedback-red !important;
+  }
+}
+
+.form form .field-wrapper.field-invalid .field-description {
+  padding-left: clamp(1rem, 5vw, 1.25rem);
+
+  &::before {
+    background-image: url('../../icons/ico-info--warning-circle.svg');
   }
 }
